5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1649_2703.log
== SUBMITION (2019-04-07 15:30:51) 
-- CODE:
idade= int(inout("digite a idade:"))
if(idade=18):
	mensagem = "eleitor"
else:
	mensagem: "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.158841
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 2
    if(idade=18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:31:17) 
-- CODE:
idade= int(inout("digite a idade:"))
if(idade=18):
	mensagem = "eleitor"
else:
	mensagem: "nao_eleitor"
print(mensagem)
		
-- ERROR:
File "XXXX", line 2
    if(idade=18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:31:58) 
-- CODE:
idade= int(inout("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem: "nao_eleitor"
print(mensagem)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade= int(inout("digite a idade:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:32:25) 
-- CODE:
idade= int(inout("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade= int(inout("digite a idade:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:32:35) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:32:49) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.210166
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:32:57) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:33:04) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.143513
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:33:30) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.175681
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:33:34) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.132024
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:33:42) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:34:18) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade>==18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- ERROR:
File "XXXX", line 2
    if(idade>==18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:34:28) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:34:37) 
-- CODE:
idade= int(input("digite a idade:"))
if(idade>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
		
-- EXECUTION TIME:
0.180993
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
